dice roller branch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">lgg5 fix</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Dice Roller</string>
+    <string name="roll">Roll</string>
 </resources>
